  to be true in the GNU make manual.

* WARNING: New build requirement
  GNU make utilizes facilities from GNU Gnulib: Gnulib requires certain C99
  features in the C compiler and so these features are required by GNU make:
  https://www.gnu.org/software/gnulib/manual/html_node/C99-features-assumed.html
  The configure script should verify the compiler has these features.

* Target-specific variables can now be marked "unexport".

* Exporting / unexporting target-specific variables is handled correctly, so
  that the attribute of the most specific variable setting is used.

* Special targets like .POSIX are detected upon definition, ensuring that any
  change in behavior takes effect immediately, before the next line is parsed.

* A long-standing issue with the directory cache has been resolved: changes
  made as a side-effect of some other target's recipe are now noticed as
  expected.

* GNU Make can now be built for MS-Windows using the Tiny C tcc compiler.


Version 4.3 (19 Jan 2020)

A complete list of bugs fixed in this version is available here:

https://sv.gnu.org/bugs/index.php?group=make&report_id=111&fix_release_id=108&set=custom

* WARNING: Backward-incompatibility!
  Number signs (#) appearing inside a macro reference or function invocation
  no longer introduce comments and should not be escaped with backslashes:
  thus a call such as:
    foo := $(shell echo '#')
  is legal.  Previously the number sign needed to be escaped, for example:
    foo := $(shell echo '\#')
  Now this latter will resolve to "\#".  If you want to write makefiles
  portable to both versions, assign the number sign to a variable:
    H := \#
    foo := $(shell echo '$H')
  This was claimed to be fixed in 3.81, but wasn't, for some reason.
  To detect this change search for 'nocomment' in the .FEATURES variable.

* WARNING: Backward-incompatibility!
  Previously appending using '+=' to an empty variable would result in a value